--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,15 +1,20 @@
-<div>
-  <h1>Fred's Store</h1>
-
-    <div>
-      <p>Welcome, #{@user.name}</p>
-      <img src="https://cdn-icons-png.flaticon.com/512/520/520464.png" alt="Welcome image">
-      <%= link_to "Add new category", new_category_path %>
-      <%= button_to "Log out", destroy_user_session_path, method: :delete %>
-
-      <p class="text-lg">Welcome to Budget App</p>
-      <img src="https://cdn-icons-png.flaticon.com/512/295/295128.png" alt="Welcome image">
-      <%= link_to "Log in", new_user_session_path %>
-      <%= link_to "Sign up", new_user_registration_path %>
+<%= stylesheet_link_tag 'homepage', media: 'all', 'data-turbolinks-track': 'reload' %>
+<body>
+  <main class="welcome-page">
+    <div class="logo">
+      <h1 class="logo_text">G-Wallet</h1>
+      <p class="text-welcome">The best money management solution </p>
     </div>
-</div>
+      <div class="info-user">
+        <% if user_signed_in? %>
+          <p>Welcome, #{@user.name}</p>
+          <img src="https://cdn-icons-png.flaticon.com/512/520/520464.png" alt="Welcome image">
+          <%= link_to "Add new category", new_category_path %>
+          <%= button_to "Log out", destroy_user_session_path, method: :delete %>
+        <% else %>
+          <%= link_to "Sign in", new_user_session_path, class: "sign-link" %>
+          <%= link_to "Sign up", new_user_registration_path, class: "sign-link" %>
+        <% end %>
+    </div>
+  </main>
+</body>
