--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2,3 +2,12 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.back {
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 800;
+  display: flex;
+  color: white;
+  padding: 7px;
+}
