--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -9,25 +9,25 @@
 }
 
 .logo {
-  height: 50vh;
+  height: 33vh;
   margin: 0;
-  width: 69%;
+  width: 100%;
   background-color: #3778C2;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: flex-start;
-  padding: 20px;
+  padding: 15px;
   border-bottom-right-radius: 100%;
 }
 
 .logo_text {
   color: lightgreen;
+  margin-bottom: -10px;
 }
 
 .text-welcome {
   color: white;
-  margin-bottom: 150px;
 }
 
 .info-user {
@@ -35,7 +35,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 20px 0;
+  margin: 3px 0;
   height: auto;
   text-align: center;
 }
@@ -81,6 +81,7 @@
   color: #434343;
   align-self: center;
   text-decoration: none;
+  margin-top: 10px;
 }
 
 .log-out:hover {
