--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,14 +1,29 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Categories</h1>
-
-<div id="categories">
-  <% @categories.each do |category| %>
-    <p><%= category.name %></p>
-    <p>
-      <%= link_to "Show this category", category %>
-    </p>
-  <% end %>
+<%= stylesheet_link_tag 'category_index', media: 'all', 'data-turbolinks-track': 'reload' %>
+<div class="cat_header">
+ <div class="i_back"> <%= link_to "<", root_path, class:"back" %></div>
+ <div class="p_title">My Categories</div>
+ <div class="i_menu"></div>
 </div>
 
-<%= link_to "New category", new_category_path %>
+<div id="categories">
+  <ul class="category_block">
+    <% @categories.each do |category| %>
+      <li class="category_card">
+        <%= link_to category, class:"category_card" do %>
+          <div class="cat_img">
+            <%= image_tag(category.icon, alt: "Icon pic", class:"cat_img") %>
+          </div>
+          <div class="cat_nd">
+            <p class="cat_title"><%= "#{category.name}" %></p>
+            <p><%= category.created_at.to_date %></p>
+          </div>
+          <div class="cat_t">
+            <p class="cat_amount">$<%= Transaction.where(category_id: category.id).sum(:amount) %></p>
+          </div>
+        <% end %>  
+      </li>  
+    <% end %>
+  </ul>  
+</div>
+
+<%= link_to "New category", new_category_path, class:"log-out" %>
