--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  background-color: rgb(225, 224, 224);
 }
 
 .back {
@@ -10,4 +11,25 @@ body {
   display: flex;
   color: white;
   padding: 7px;
+}
+
+.log-out {
+  position: absolute;
+  bottom: 2;
+  right: 0;
+  margin-right: 20px;
+  width: 90px;
+  background-color: #3778C2;
+  ;
+  padding: 10px;
+  border-radius: 20px;
+  color: #434343;
+  align-self: center;
+  text-decoration: none;
+  margin-top: 10px;
+}
+
+.log-out:hover {
+  color: white;
+  border-color: #5fb523;
 }
