--- a/app/assets/stylesheets/signIn.css
+++ b/app/assets/stylesheets/signIn.css
@@ -33,7 +33,6 @@
 }
 
 .input-field {
-  width: 100%;
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
@@ -64,4 +63,10 @@
 
 .links_l {
   text-decoration: none;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
 }
