update page still

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -2,7 +2,7 @@
 <%= stylesheet_link_tag 'category_index' %>
 
 <div class="cat_header">
- <div class="i_back"> <%= link_to "<", categories_path, class:"back" %></div>
+ <div class="i_back"> <%= link_to "<", root_path, class:"back" %></div>
  <div class="p_title">New Categories</div>
  <div class="i_menu"></div>
 </div>
