--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,22 +14,23 @@ body {
 }
 
 .log-out {
-  position: absolute;
-  bottom: 2;
+  position: fixed;
+  bottom: 0;
   right: 0;
   margin-right: 20px;
-  width: 90px;
+  min-width: 90px;
   background-color: #3778C2;
-  ;
-  padding: 10px;
+  padding: 5px;
   border-radius: 20px;
   color: #434343;
   align-self: center;
   text-decoration: none;
-  margin-top: 10px;
+  margin-bottom: 10px;
+  z-index: 3;
 }
 
 .log-out:hover {
   color: white;
   border-color: #5fb523;
+  background-color: #5fb523;
 }
