--- a/app/assets/stylesheets/category_index.css
+++ b/app/assets/stylesheets/category_index.css
@@ -1,11 +1,13 @@
 .cat_header {
   background-color: #3778C2;
   height: 30px;
-  margin-top: -20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  width: 100%;
+  position: fixed;
+  top: 0;
 }
 
 .p_title {
@@ -22,6 +24,7 @@
   justify-content: center;
   text-align: center;
   padding: 10px;
+  margin-top: 70px;
 }
 
 .category_card {
@@ -40,10 +43,15 @@
   color: #434343;
 }
 
+.category_card:hover {
+  width: 90%;
+}
+
 .cat_img {
   height: 80px;
   width: 80px;
   margin-right: 10px;
+  border-radius: 12px;
 }
 
 .cat_nd, .cat_nd p{
