--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -1,5 +1,4 @@
 .welcome-page {
-  background-color: rgba(255, 254, 254, 0.635);
   width: 100%;
   height: auto;
   margin-top: -16px;
@@ -11,7 +10,6 @@
 .logo {
   height: 33vh;
   margin: 0;
-  width: 100%;
   background-color: #3778C2;
   display: flex;
   flex-direction: column;
@@ -35,8 +33,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin: 3px 0;
-  height: auto;
+  height: 62vh;
   text-align: center;
 }
 
@@ -50,6 +49,11 @@
   align-self: center;
   text-decoration: none;
   border: solid #434343 2.5px;
+}
+
+.sign-link:hover {
+  border-color: #5fb523;
+  background-color: #5fb523;
 }
 
 .category-link {
@@ -67,4 +71,6 @@
 .category-link:hover {
   color: white;
   border-color: #5fb523;
+  border-color: #5fb523;
+  background-color: #5fb523;
 }
