--- a/app/assets/stylesheets/homepage.css
+++ b/app/assets/stylesheets/homepage.css
@@ -17,6 +17,10 @@
   align-items: flex-start;
   padding: 15px;
   border-bottom-right-radius: 100%;
+  animation-name: logoAnimation;
+  animation-duration: 1.5s;
+  animation-timing-function: ease;
+  animation-iteration-count: 1;
 }
 
 .logo_text {
@@ -26,6 +30,16 @@
 
 .text-welcome {
   color: white;
+}
+
+@keyframes logoAnimation {
+  0% {
+    height: 5vh;
+  }
+
+  100% {
+    height: 33vh;
+  }
 }
 
 .info-user {
@@ -41,7 +55,8 @@
 
 .sign-link {
   width: 40%;
-  background-color: #3778C2;;
+  background-color: #3778C2;
+  ;
   margin-top: 50px;
   padding: 10px;
   border-radius: 20px;
@@ -58,7 +73,8 @@
 
 .category-link {
   width: 40%;
-  background-color: #3778C2;;
+  background-color: #3778C2;
+  ;
   margin-top: 50px;
   padding: 10px;
   border-radius: 20px;
