--- a/app/assets/stylesheets/signIn.css
+++ b/app/assets/stylesheets/signIn.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: #3778C2;
+  background-color: #3778c2;
   height: 30px;
   margin-top: -20px;
   display: flex;
@@ -48,7 +48,7 @@
 }
 
 .submit-button {
-  background-color: #3778C2;
+  background-color: #3778c2;
   color: #fff;
   border: none;
   padding: 10px 20px;
