--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@ body {
   right: 0;
   margin-right: 20px;
   min-width: 90px;
-  background-color: #3778C2;
+  background-color: #3778c2;
   padding: 5px;
   border-radius: 20px;
   color: #434343;
