add shearch icon to header

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,7 +2,7 @@
 <div class="cat_header">
  <div class="i_back"> <%= link_to "<", root_path, class:"back" %></div>
  <div class="p_title">My Categories</div>
- <div class="i_menu"></div>
+ <div class="i_menu"><img src="https://th.bing.com/th/id/OIP.RF8hdNm5eOnLDpG_GSu5NwHaHN?pid=ImgDet&rs=1" alt="No transactions_img" style="width: 20px; margin-right:5px;"></div>
 </div>
 
 <div id="categories">
