Add search icon

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,7 +4,7 @@
 <div class="cat_header">
  <div class="i_back"> <%= link_to "<", categories_path, class:"back" %></div>
  <div class="p_title"> Transactions </div>
- <div class="i_menu"></div>
+ <div class="i_menu"><img src="https://icon-library.com/images/white-search-icon-png/white-search-icon-png-4.jpg" alt="No transactions_img" style="width: 150px;"></div>
 </div>
 <div>
 
