--- a/app/views/transactions/new.html.erb
+++ b/app/views/transactions/new.html.erb
@@ -4,7 +4,7 @@
 <div class="cat_header">
  <div class="i_back"> <%= link_to "<", category_path(@category), class:"back" %></div>
  <div class="p_title">New Transaction</div>
- <div class="i_menu"></div>
+ <div class="i_menu"><img src="https://icon-library.com/images/white-search-icon-png/white-search-icon-png-4.jpg" alt="No transactions_img" style="width: 150px;"></div>
 </div>
 
 <div class="myform">
