Update validate for icon update categorycontroller to update category view to return error messge

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -7,6 +7,7 @@
  <div class="i_menu"><img src="https://icon-library.com/images/white-search-icon-png/white-search-icon-png-4.jpg" alt="No transactions_img" style="width: 150px;"></div>
 </div>
 <div class="myform">
+  <p class="notice", style="color:red;"><%= notice %></p>
   <%= form_with model: @category,  html: { class: "login-form" } do |form| %>
     <div class="field">
       <%= form.label :name %>
