--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'category_index', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'category_index' %>
 <div class="cat_header">
  <div class="i_back"> <%= link_to "<", root_path, class:"back" %></div>
  <div class="p_title">My Categories</div>
