--- a/app/views/home_page/index.html.erb
+++ b/app/views/home_page/index.html.erb
@@ -1,4 +1,4 @@
-<%= stylesheet_link_tag 'homepage', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'homepage' %>
 <body>
   <main class="welcome-page">
     <div class="logo">
