--- a/app/assets/stylesheets/signIn.css
+++ b/app/assets/stylesheets/signIn.css
@@ -19,7 +19,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 60vh;
+  justify-content: center;
+  min-height: 100vh;
   color: #434343;
 }
 
